--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -1,9 +1,9 @@
-{% extends "layout.html" %}
+{% extends "auth/layout.html" %}
 {% block body %}
 <div class="container">
     <div class="row">
         <div class="col-md-4 col-md-offset-4">
-            <form method=POST action="{{ url_for('register') }}">
+            <form method=POST action="{{url_for('auth.register')}}">
                 <div class="form-group">
                     <label for="exampleInputEmail1">Username</label>
                     <input type="text" class="form-control" name="username" placeholder="Username">
